test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/void_array_nested_in_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  extern
  void
  (
  *
  identifier(ptr)
  )
  [
  const int(3)
  ]
  [
  const int(4)
  ]
  ;
  void
  *
  identifier(foo)
  (
  void
  )
  {
  return
  identifier(ptr)
  ;
  }
